# JailDAM

./: .gitignore  Autoencoder.py  README.md  autoencoder_dual.py  autoencoder_semisupervised.py  autoencoder_vlm_baseline.py  download_dataset.py  experiment_mmvet_only.py  load_hf_datasets.py  pyproject.toml  threshold_optimizer.py
reference/: load_datasets.py
results/: dual_autoencoder_results.json  semisupervised_autoencoder_results.json  vlm_autoencoder_detailed_results.json
